Fixed a bug which gave each column its own scrollbars on Firefox 3.6 / Win XP.

--- a/style/style.css
+++ b/style/style.css
@@ -141,7 +141,7 @@ div#mainarea {
 div.column {
     margin:0px;
 	height: 100%;
-    overflow-y: auto;
+    overflow: hidden;
 }
 
 div.columnheading {
